Adding Ability to stream current mode intervals
new openapi spec
